# stellar-ghost-contract

./: Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: build.yml
src/: bin.rs  lib.rs
